--- a/quote.html
+++ b/quote.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CONSULT - Consultancy Website Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+   <title>Home | Nirvana Solutions – Training & Placement Service</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Training and Placement, Job Consultancy, Career Development, Professional Courses, Admission Guidance, Loan Assistance, Nirvana Solutions">
+<meta name="description" content="Nirvana Solutions offers expert training and job placement services across various sectors including Banking, Healthcare, Digital Marketing, Engineering, and Management. Transform your career with us.">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -46,10 +47,10 @@
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@example.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>official.nirvanasolutions@gmail.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>‪+91-7870703693‬</p>
                     </div>
                 </div>
             </div>
@@ -60,9 +61,9 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>consult</h1>
-        </a>
+          <a href="index.html" class="navbar-brand p-0">
+    <img src="img/logo.png" alt="Nirvana Solutions Logo" style="height: 70px;">
+</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -70,11 +71,11 @@
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="program.html" class="nav-item nav-link">Our Program</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Candidates Corner</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                        <a href="blog.html" class="dropdown-item"> Admission </a>
                         <a href="detail.html" class="dropdown-item">Blog Detail</a>
                         <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="quote.html" class="dropdown-item active">Quote Form</a>
@@ -188,8 +189,8 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>official.nirvanasolutions@gmail.com</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>‪+91-7870703693‬0</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
