--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,7 @@
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>official.nirvanasolutions@gmail.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@nirvanasolutions.in </p>
                     </div>
                     <div class="py-2">
                         <p class="m-0"><i class="fa fa-phone-alt me-2"></i>‪+91-7870703693‬</p>
@@ -77,10 +77,10 @@
                     <div class="dropdown-menu m-0">
                         <a href="blog.html" class="dropdown-item"> Admission </a>
                         <a href="detail.html" class="dropdown-item active">Blog Detail</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="team.html" class="dropdown-item">The Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="loan-partner.html" class="dropdown-item">Loan Partners</a>
+                         <a href="training-placement .html" class="dropdown-item">Training & Placement Partners</a>
+                        <a href="current-openings.html" class="dropdown-item">Current Openings</a>
+                        <a href="registration.html" class="dropdown-item">Registration</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -292,59 +292,75 @@
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
-        <div class="row g-5">
-            <div class="col-12 text-center">
-                <h1 class="display-5 mb-4">Stay Update!!!</h1>
-                <form class="mx-auto" style="max-width: 600px;">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                        <button class="btn btn-dark px-4">Sign Up</button>
-                    </div>
-                </form>
+      <div class="row g-5">
+    <div class="row g-5">
+    <div class="col-12 text-center">
+        <h1 class="display-5 mb-4">Need Career Guidance?</h1>
+        <p class="mb-4">Confused about the right training or admission path? Let our experts guide you. We’re here to help you take the next step in your career.</p>
+        <a href="https://wa.me/917870703693" target="_blank" class="btn btn-success px-4 py-2">
+            <i class="fab fa-whatsapp me-2"></i>Talk To Expert
+        </a>
+    </div>
+</div>
+
+</div>
+
+    </div>
+   <div class="container-fluid bg-dark text-secondary p-5">
+    <div class="row g-5">
+
+        <!-- About Us -->
+        <div class="col-lg-3 col-md-6">
+            <h3 class="text-white mb-4">About Us</h3>
+            <p>Nirvana Solutions bridges the gap between education and employment with expert-led training programs and strong placement support. Our mission is to guide you toward a brighter professional future.</p>
+        </div>
+
+        <!-- Our Programs -->
+        <div class="col-lg-3 col-md-6">
+            <h3 class="text-white mb-4">Our Programs</h3>
+            <div class="d-flex flex-column justify-content-start">
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Banking</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Logistics</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hotel Management</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Healthcare</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Education</a>
+                <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Digital Marketing</a>
             </div>
         </div>
-    </div>
-    <div class="container-fluid bg-dark text-secondary p-5">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Quick Links</h3>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Popular Links</h3>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>official.nirvanasolutions@gmail.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>‪+91-7870703693‬0</p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                </div>
+
+        <!-- Popular Links -->
+        <div class="col-lg-3 col-md-6">
+            <h3 class="text-white mb-4">Popular Links</h3>
+            <div class="d-flex flex-column justify-content-start">
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Admission</a>
+                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Current Openings</a>
+                <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
             </div>
         </div>
+
+        <!-- Contact Info -->
+        <div class="col-lg-3 col-md-6">
+            <h3 class="text-white mb-4">Get In Touch</h3>
+            <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>House No - 155 , Sector J , Kankarbagh Rd , Patna</p>
+            <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@nirvanasolutions.in </p>
+            <p class="mb-4"><i class="bi bi-telephone text-primary me-2"></i>+91-7870703693 / +91-7870701793</p>
+
+            <!-- Social Media Links -->
+            <div class="d-flex">
+                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
+                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-whatsapp fw-normal"></i></a>
+            </div>
+        </div>
+
     </div>
+</div>
+
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="index.html">Nirvana Solutions</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="www.arbazalamagency.com">Arbaz Alam Agency</a></p>
     </div>
     <!-- Footer End -->
 
