--- a/about.html
+++ b/about.html
@@ -89,19 +89,18 @@
     </nav>
     <!-- Navbar End -->
 
-
-    <!-- Page Header Start -->
-    <div class="container-fluid bg-dark p-5">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1 class="display-4 text-white">About Us</h1>
-                <a href="">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="">About</a>
-            </div>
-        </div>
+<!-- Page Header Start -->
+<div class="container-fluid p-5 d-flex justify-content-center align-items-center" style="background: url('img/carousel-1.jpg') center center / cover no-repeat; background-color: rgba(0,0,0,0.7); background-blend-mode: darken; height: 60vh;">
+    <div class="text-center">
+        <h1 class="display-4 text-white">About Us</h1>
+        <a href="">Home</a>
+        <i class="far fa-square text-primary px-2"></i>
+        <a href="">About</a>
     </div>
-    <!-- Page Header End -->
+</div>
+<!-- Page Header End -->
+
+
 
 
     <!-- About Start -->
