--- a/feature.html
+++ b/feature.html
@@ -75,7 +75,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Candidates Corner</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item"> Admission </a>
+                        <a href="admission.html" class="dropdown-item"> Admission </a>
                         <a href="blog.html" class="dropdown-item"> Our Students Placed In</a>
                         <a href="feature.html" class="dropdown-item active">Features</a>
                          <a href="training-placement .html" class="dropdown-item">Training & Placement Partners</a>
