--- a/quote.html
+++ b/quote.html
@@ -75,7 +75,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Candidates Corner</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item"> Admission </a>
+                        <a href="admission.html" class="dropdown-item"> Admission </a>
                         <a href="blog.html" class="dropdown-item"> Our Students Placed In</a>
                         <a href="loan-partner.html" class="dropdown-item">Loan Partners</a>
                         <a href="quote.html" class="dropdown-item active">Quote Form</a>
