--- a/program.html
+++ b/program.html
@@ -306,7 +306,7 @@
                 <div class="testimonial-item">
                     <p class="fs-5 fw-light mb-4"><i class="fa fa-quote-left text-primary me-3 fa-lg"></i>Exceptional service and support! Their expertise made our process smooth and stress-free. Highly recommend for any business needs.</p>
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid rounded-circle border border-3 border-primary" src="img/testimonial-1.jpg" alt="Client 1" style="width: 70px; height: 70px;">
+                        <img class="img-fluid rounded-circle border border-3 border-primary" src="img/testimonial.jpg" alt="Client 1" style="width: 70px; height: 70px;">
                         <div class="ps-4">
                             <h5 class="text-dark mb-1">Amit Sharma</h5>
                             <small class="text-dark text-uppercase">Entrepreneur</small>
@@ -318,7 +318,7 @@
                 <div class="testimonial-item">
                     <p class="fs-5 fw-light mb-4"><i class="fa fa-quote-left text-primary me-3 fa-lg"></i>They truly care about clients. From consultation to execution, the whole journey was professional, friendly, and effective.</p>
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid rounded-circle border border-3 border-primary" src="img/testimonial-2.jpg" alt="Client 2" style="width: 70px; height: 70px;">
+                        <img class="img-fluid rounded-circle border border-3 border-primary" src="img/testimonial.jpg" alt="Client 2" style="width: 70px; height: 70px;">
                         <div class="ps-4">
                             <h5 class="text-dark mb-1">Sneha Verma</h5>
                             <small class="text-dark text-uppercase">Marketing Manager</small>
