--- a/program.html
+++ b/program.html
@@ -293,7 +293,7 @@
         <!-- Left Image Side -->
         <div class="col-lg-6" style="min-height: 500px;">
             <div class="position-relative h-100">
-                <img class="position-absolute w-100 h-100" src="img/testimonial.jpg" alt="testimonial bg" style="object-fit: cover;">
+                <img class="position-absolute w-100 h-100" src="img/test-bg.jpg" alt="testimonial bg" style="object-fit: cover;">
             </div>
         </div>
 
