--- a/quote.html
+++ b/quote.html
@@ -91,8 +91,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid bg-dark p-5">
-        <div class="row">
+   <div class="container-fluid p-5 d-flex justify-content-center align-items-center" style="background: url('img/carousel-1.jpg') center center / cover no-repeat; background-color: rgba(0,0,0,0.7); background-blend-mode: darken; height: 60vh;">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Free Quote</h1>
                 <a href="">Home</a>
