--- a/program.html
+++ b/program.html
@@ -151,8 +151,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid bg-dark p-5">
-        <div class="row">
+   <div class="container-fluid p-5 d-flex justify-content-center align-items-center" style="background: url('img/carousel-1.jpg') center center / cover no-repeat; background-color: rgba(0,0,0,0.7); background-blend-mode: darken; height: 60vh;">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Our Programs</h1>
                 <a href="">Home</a>
@@ -299,7 +298,7 @@
 
         <!-- Right Content Side -->
         <div class="col-lg-6 d-flex flex-column justify-content-center py-6 px-5">
-            <h1 class="display-5 mb-4 text-dark">What Our Clients Say</h1>
+            <h1 class="display-5 mb-4 text-dark">What Our Candidates Say</h1>
 
             <div class="owl-carousel testimonial-carousel">
                 <!-- Testimonial 1 -->
