--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-   <title>Home | Nirvana Solutions – Training & Placement Service</title>
+   <title>Contact | Nirvana Solutions – Training & Placement Service</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="Training and Placement, Job Consultancy, Career Development, Professional Courses, Admission Guidance, Loan Assistance, Nirvana Solutions">
 <meta name="description" content="Nirvana Solutions offers expert training and job placement services across various sectors including Banking, Healthcare, Digital Marketing, Engineering, and Management. Transform your career with us.">
@@ -108,45 +108,67 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Contact For Any Queries</h1>
-                <form>
-                    <div class="row g-3">
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
-                                <label for="form-floating-1">Full Name</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
-                                <label for="form-floating-2">Email address</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-3" placeholder="Subject">
-                                <label for="form-floating-3">Subject</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px"></textarea>
-                                <label for="form-floating-4">Message</label>
-                              </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                 <form>
+                <div class="row gx-3">
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="fullName" placeholder="John Doe" required>
+                            <label for="fullName" class="text-dark">Full Name</label>
                         </div>
                     </div>
-                </form>
-            </div>
-            <div class="col-lg-6" style="min-height: 400px;">
-                <div class="position-relative h-100">
-                    <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="tel" class="form-control" id="phoneNumber" placeholder="9876543210" required>
+                            <label for="phoneNumber" class="text-dark">Phone Number</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="emailAddress" placeholder="name@example.com" required>
+                            <label for="emailAddress" class="text-dark">Email Address</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating mb-3">
+                            <select class="form-select" id="serviceSelect" required>
+                                <option selected disabled>Select a Service</option>
+                                <option value="Banking">Training - Banking</option>
+                                <option value="Logistics">Training - Logistics</option>
+                                <option value="Hotel Management">Training - Hotel Management</option>
+                                <option value="Healthcare">Training - Healthcare</option>
+                                <option value="Education">Training - Education</option>
+                                <option value="Digital Marketing">Training - Digital Marketing</option>
+                                <option value="Medical UG">Admission - Medical (UG/PG)</option>
+                                <option value="Engineering">Admission - Engineering (B.Tech/B.E)</option>
+                                <option value="Management">Admission - Management (BBA/MBA)</option>
+                                <option value="Loan Assistance">Loan Assistance</option>
+                                <option value="Placement Support">Placement Support</option>
+                                <option value="Current Openings">Current Job Openings</option>
+                            </select>
+                            <label for="serviceSelect" class="text-dark">Select a Service</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" placeholder="Your message" id="message" style="height: 100px"></textarea>
+                            <label for="message" class="text-dark">Your Message (Optional)</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary w-100" type="submit">Submit Request</button>
+                    </div>
                 </div>
+            </form>
             </div>
+          <div class="col-lg-6" style="min-height: 400px;">
+    <div class="position-relative h-100">
+        <iframe class="position-relative w-100 h-100"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.147254711655!2d85.16876147520399!3d25.596255277467437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f2a92a4aaf1137%3A0x40c5a3e62a37e00d!2sHouse%20No%20155%2C%20Sector%20J%2C%20Kankarbagh%20Rd%2C%20Patna%2C%20Bihar%20800020!5e0!3m2!1sen!2sin!4v1718365659301!5m2!1sen!2sin"
+            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+        </iframe>
+    </div>
+</div>
+
         </div>
     </div>
     <!-- Contact End -->
