--- a/detail.html
+++ b/detail.html
@@ -331,11 +331,11 @@
         <div class="col-lg-3 col-md-6">
             <h3 class="text-white mb-4">Popular Links</h3>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Admission</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Current Openings</a>
-                <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                <a class="text-secondary mb-2" href="admission.html"><i class="bi bi-arrow-right text-primary me-2"></i>Admission</a>
+                <a class="text-secondary mb-2" href="current-openings.html"><i class="bi bi-arrow-right text-primary me-2"></i>Current Openings</a>
+                <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
             </div>
         </div>
 
