--- a/program.html
+++ b/program.html
@@ -240,39 +240,50 @@
     <!-- Quote Start -->
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
-            <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Request A Free Quote</h1>
-                <p class="mb-4">Kasd vero erat ea amet justo no stet, et elitr no dolore no elitr sea kasd et dolor diam tempor. Nonumy sed dolore no eirmod sit nonumy vero lorem amet stet diam at. Ea at lorem sed et, lorem et rebum ut eirmod gubergren, dolor ea duo diam justo dolor diam ipsum dolore stet stet elitr ut. Ipsum amet labore lorem lorem diam magna sea, eos sed dolore elitr.</p>
-                <form>
-                    <div class="row gx-3">
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
-                                <label for="form-floating-1">Full Name</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
-                                <label for="form-floating-2">Email address</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
-                                </select>
-                                <label for="floatingSelect">Select A Service</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <button class="btn btn-primary w-100 h-100" type="submit">Request A Quote</button>
-                        </div>
-                    </div>
-                </form>
+           <div class="col-lg-6 py-6 px-5">
+    <h1 class="display-5 mb-4">Apply for Our Programs</h1>
+    <p class="mb-4">Fill out the form to enroll in one of our industry-focused programs. Our team will contact you shortly to assist with the admission process.</p>
+    <form>
+        <div class="row gx-3">
+            <div class="col-6">
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="form-floating-name" placeholder="John Doe">
+                    <label for="form-floating-name">Full Name</label>
+                </div>
             </div>
+            <div class="col-6">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="form-floating-email" placeholder="name@example.com">
+                    <label for="form-floating-email">Email address</label>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-floating mb-3">
+                    <input type="tel" class="form-control" id="form-floating-phone" placeholder="Phone Number">
+                    <label for="form-floating-phone">Phone Number</label>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-floating">
+                    <select class="form-select" id="floatingSelectProgram" aria-label="Select Program">
+                        <option selected disabled>Select Program</option>
+                        <option value="Banking">Banking</option>
+                        <option value="Logistics">Logistics</option>
+                        <option value="Hotel Management">Hotel Management</option>
+                        <option value="Healthcare">Healthcare</option>
+                        <option value="Education">Education</option>
+                        <option value="Digital Marketing">Digital Marketing</option>
+                    </select>
+                    <label for="floatingSelectProgram">Select Program</label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary w-100 py-2" type="submit">Submit Application</button>
+            </div>
+        </div>
+    </form>
+</div>
+
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
